--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "18.0.0",
     "react-dom": "^18.2.0",
     "react-native": "0.69.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.0.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
